# card-game-analysis

./: .gitignore  .readthedocs.yaml  Daifugo.py  Deck.py  LICENSE  Players.py  README.md  game.py  setup.cfg
docs/: requirements.txt
docs/source/: card_game_analysis.rst  conf.py  index.rst  modules.rst  usage.rst
src/card-game-analysis/: Daifugo.py  Deck.py  game.py
src/card_game_analysis/: Players.py  __init__.py  card.py  deck.py  game.py  player.py  players.py  stack.py
tests/: test_deck.py
