[metadata]
name = card-game-analysis
version = 0.1
author = Nicolai Warenfors Nordahl
author_email = nicolaiwnordahl@gmail.com
description = Tools to analyse card games
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nwnordahl/card-game-analysis
project_urls =
    Documentation = https://card-game-analysis.rtfd.io
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src